Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24683

Qt Creator crashes while parsing files

XMLWordPrintable

    • 4c1c11b7b62ef231a2811d5ae94f7c36716230e0 (qt-creator/qt-creator/4.13)

      I wanted to benchmark the build-time with different compiler-flags so I deleted the build directory outside of qt-creator, ran qmake, compiled, deleted the build dir, made a change in a .pri file, which is included by > 50 projects, qmake, compile, and so on.
      After deleting the build directory and while or shortly after making the change in the .pri file, Qt Creator crashed. That happend multiple times.

      I can reproduce it more or less reliably by loading qtcreator.pro inside Qt Creator.
      then open a .pri file which causes files to be reparsed e.g. qtcreator.pri.
      Then I just type a space and save the file and repeat it. sometimes it already crashes.
      Switchichg to a different kit and continuing to modify and save the pri file also helps.

      1   QmakeProjectManager::QmakeBuildSystem::qmakeVfs             qmakeproject.cpp     821  0x7ffc6997a480 
      2   QmakeProjectManager::QmakePriFile::scheduleUpdate           qmakeparsernodes.cpp 236  0x7ffc6995e220 
      3   QmakeProjectManager::Internal::QmakePriFileDocument::reload qmakeproject.cpp     127  0x7ffc6997bbe3 
      4   Core::DocumentManager::checkForReload                       documentmanager.cpp  1292 0x7ffc6d8c00b0 
      5   QTimer::timeout                                             Qt5Core                   0x7ffc6e6f357a 
      6   QObject::event                                              Qt5Core                   0x7ffc6e6ebefd 
      7   QApplicationPrivate::notify_helper                          Qt5Widgets                0x7ffc6f1b57f0 
      8   QApplication::notify                                        Qt5Widgets                0x7ffc6f1b478a 
      9   QCoreApplication::notifyInternal2                           Qt5Core                   0x7ffc6e6c482a 
      10  QEventDispatcherWin32Private::sendTimerEvent                Qt5Core                   0x7ffc6e710869 
      11  QEventDispatcherWin32::event                                Qt5Core                   0x7ffc6e70ebb8 
      12  QApplicationPrivate::notify_helper                          Qt5Widgets                0x7ffc6f1b57f0 
      13  QApplication::notify                                        Qt5Widgets                0x7ffc6f1b478a 
      14  QCoreApplication::notifyInternal2                           Qt5Core                   0x7ffc6e6c482a 
      15  QCoreApplicationPrivate::sendPostedEvents                   Qt5Core                   0x7ffc6e6c65d5 
      16  qt_plugin_query_metadata                                    qwindows                  0x7ffc6e01771f 
      17  QEventDispatcherWin32::processEvents                        Qt5Core                   0x7ffc6e70ee17 
      18  qt_plugin_query_metadata                                    qwindows                  0x7ffc6e0176f9 
      19  QEventLoop::exec                                            Qt5Core                   0x7ffc6e6c097c 
      20  QCoreApplication::exec                                      Qt5Core                   0x7ffc6e6c37f4 
      

        For Gerrit Dashboard: QTCREATORBUG-24683
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            mkrems Marcel Krems
            Votes:
            9 Vote for this issue
            Watchers:
            17 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes